Ingress/ingress-nginx-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ingress-nginx-controller
    namespace: ingress
    labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
spec:
    replicas: 2
    selector:
        matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/part-of: ingress-nginx
    template:
        metadata:
            labels:
                app.kubernetes.io/name: ingress-nginx
                app.kubernetes.io/part-of: ingress-nginx
        spec:
            serviceAccountName: ingress
            containers:
                - name: ingress-nginx-controller
                  image: k8s.gcr.io/ingress-nginx/controller:v1.0.0
                  args:
                      - /nginx-ingress-controller
                      - --configmap=$(POD_NAMESPACE)/nginx-config
                  ports:
                      - name: http
                        containerPort: 80
                      - name: https
                        containerPort: 443
