Ingress/ingress-api-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-server-external
    namespace: ingress
spec:
    type: ExternalName
    externalName: api-server-service.api.svc.cluster.local
