Ingress/ingress-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: ingress-nginx-svc
    namespace: ingress
    annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '80'
spec:
    type: NodePort
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
          name: http
        - protocol: TCP
          port: 443
          targetPort: 443
          name: https
    selector:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
